Add link hover styles

--- a/assets/css/objects.less
+++ b/assets/css/objects.less
@@ -42,6 +42,10 @@
         margin-right: 0.5em;
         &:before { display: none; }
     }
+    a {
+        padding: 0.15rem  0.3rem;
+        margin: -0.15rem -0.3rem;
+    }
 }
 
 .testimonial {
