Global footer, first pass

--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -10,6 +10,10 @@ html, body {
     background: @brand-three;
     color: @brand-one;
 }
+body {
+    background: url(../img/bg.png) repeat-x scroll bottom center;
+    padding-bottom: 50px;
+}
 a,
 a:visited {
     color: inherit;
