--- a/assets/css/objects.less
+++ b/assets/css/objects.less
@@ -35,7 +35,6 @@
 .prose .links-list,
 .links-list {
     padding-left: 0;
-    margin-top: -2.5rem;
     li {
         list-style-type: none;
         display: inline;
@@ -47,6 +46,7 @@
         margin: -0.15rem -0.3rem;
     }
 }
+.prose .links-list { margin-top: -2.5rem; }
 
 .testimonial {
     blockquote,
@@ -89,7 +89,7 @@
 
 
 
-// header
+// base
 .header-logo {
     float: left;
     width: 12rem;
@@ -114,4 +114,30 @@
         max-width: 50%;
         margin: 0 0 0 auto;
     }
+}
+.footer-logo {
+    display: block;
+    margin: 1rem 0 0;
+    .ir {
+        display: block;
+        margin: 0;
+        width: 100%;
+        height: 1px;
+        padding-top: percentage(179/537);
+        background: url(../img/hamon-logo.svg) no-repeat scroll center center;
+        background-size: 80% auto;
+        transform: translateX(-5%);
+    }
+}
+.footer-nav {
+    width: 70%;
+    margin: 3rem auto;
+    li {
+        float: left;
+        width: 50%;
+        margin: 0;
+        padding: 0.75rem 0;
+        &:nth-child(even) { padding-left: 1.5rem; }
+    }
+    a { padding: 0.5rem 0; margin: -0.5rem 0; }
 }
