Add Contact page to global nav

--- a/assets/css/objects.less
+++ b/assets/css/objects.less
@@ -115,6 +115,16 @@
         max-width: 50%;
         margin: 0 0 0 auto;
     }
+    li:last-child a {
+        display: inline-block;
+        margin-top: 0.25rem;
+        padding: 0.25rem 0.75rem;
+        background: @brand-one;
+        color: @brand-three;
+        &:hover {
+            color: @brand-three !important;
+        }
+    }
 }
 .footer-logo {
     display: block;
