--- a/templates/_layouts/base.liquid
+++ b/templates/_layouts/base.liquid
@@ -6,6 +6,7 @@ nav:
   About:      /about/
   Lycӕum:     /lycaeum/
   Articles:   /articles/
+  Hire Us:    /contact/
 
 footer_nav:
   Home:       /
