Tablet width optimisation

--- a/assets/css/layout.less
+++ b/assets/css/layout.less
@@ -62,8 +62,8 @@ hr    { clear: both; }
 
 .container-values() {
     @vpads:         1.5rem, 2rem, 2rem;
-    @hpads:         1.5rem, 4rem, 2rem;
-    @max-widths:    30rem, 52rem, 60rem;
+    @hpads:         1.5rem, 3rem, 3rem;
+    @max-widths:    30rem, @md-min, @xl-min;
     @breakpoints:   '',    @sm-min, @md-min;
 }
 .container {
