--- a/templates/_layouts/base.liquid
+++ b/templates/_layouts/base.liquid
@@ -45,7 +45,7 @@ footer_nav:
 
 
 <footer class="container">
-  <a class="footer-logo" href="{{ site.baseurl | append: '/' }}">
+  <a class="footer-logo silent-hover" href="{{ site.baseurl | append: '/' }}">
     <h1 class="ir">
       Hamon
     </h1>
@@ -68,7 +68,7 @@ footer_nav:
     </ul>
   </nav>
   
-  <p class="title-type size-small">
+  <p class="footer-fineprint title-type size-small">
     From the coasts of Kerala, India.
     <br>
     <span>
