Add a link to Topics index page from Topic detail

--- a/templates/_layouts/topic.liquid
+++ b/templates/_layouts/topic.liquid
@@ -15,6 +15,11 @@ layout: base
       <p>
         Articles &amp; Guides published under
         the topic {{ page.title }}.
+        <br>
+        <br>
+        <a class="silent" href="{{ site.baseurl | append: '/topics' }}">
+          &larr; All Topics
+        </a>
       </p>
     </div>
   </div>
