--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -224,6 +224,12 @@ p {
             padding-left: (2.5rem - 0.5rem);
             padding-right:(2.5rem - 0.5rem);
         });
+        .md-plus({
+            margin-left: -(4.5rem + 0.5rem);
+            margin-right:-(4.5rem + 0.5rem);
+            padding-left: (4.5rem - 0.5rem);
+            padding-right:(4.5rem - 0.5rem);
+        });
         overflow-x: scroll;
         -webkit-overflow-scrolling: touch;
         code {
