Ensure consistent usage of 'The Lycaeum' instead of any variants

--- a/templates/_layouts/base.liquid
+++ b/templates/_layouts/base.liquid
@@ -2,21 +2,21 @@
 layout: html
 
 nav:
-  Work:       /work/
-  About:      /about/
-  Lycӕum:     /lycaeum/
-  Articles:   /articles/
-  Hire Us:    /contact/
+  Work:         /work/
+  About:        /about/
+  The Lycaeum:  /lycaeum/
+  Articles:     /articles/
+  Hire Us:      /contact/
 
 footer_nav:
-  Home:       /
-  Work:       /work/
-  About:      /about/
-  Lycӕum:     /lycaeum/
-  Articles:   /articles/
-  Contact:    /contact/
-  GitHub:     https://github.com/hamon-in
-  Twitter:    https://twitter.com/hamon_in
+  Home:         /
+  Work:         /work/
+  About:        /about/
+  The Lycaeum:  /lycaeum/
+  Articles:     /articles/
+  Contact:      /contact/
+  GitHub:       https://github.com/hamon-in
+  Twitter:      https://twitter.com/hamon_in
 
 ---
 
