Fix footer layout bug on short pages

--- a/templates/_layouts/base.liquid
+++ b/templates/_layouts/base.liquid
@@ -44,7 +44,7 @@ footer_nav:
 {{ content }}
 
 
-<footer class="container">
+<footer class="clearboth container">
   <a class="footer-logo silent-hover" href="{{ site.baseurl | append: '/' }}">
     <h1 class="ir">
       Hamon
