--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -24,10 +24,10 @@
 @brand-one:     white;
 @brand-two:     #121212;
 @brand-three:   #825D4E;
-@brand-four:    red;
+@brand-four:    lighten(@brand-three, 50%);
 @brand-five:    #D7D7D7;
 
-@brand-five-light: lighten(@brand-five, 10%);
+@brand-five-light: lighten(@brand-five, 12%);
 @brand-five-dark:  darken( @brand-five, 10%);
 
 
