--- a/assets/css/objects.less
+++ b/assets/css/objects.less
@@ -6,36 +6,18 @@
 
 .bleed,
 .wrapper {
-    &:extend(.fill-brand-one);
-    a:extend(.fill-brand-one a) {}
     padding:1.5rem 0.5rem;
-}
-.bleed {
-    .sm-plus({
-        margin: 0 0 0 @sm-sidebar;
-        padding: 1.5rem 0;
-        box-shadow: rgba(0,0,0,0.2) 0 20px 30px -15px;
-    });
-    .md-plus({
-        margin-left: @md-sidebar;
-    });
 }
 .wrapper {
     margin: 0.5rem;
-    padding:1rem 0;
-    box-shadow: rgba(0,0,0,0.2) 0 20px 30px -15px;
+    padding: 1rem 0;
     .sm-plus({
-        margin: 1.5rem 1.5rem 1.5rem @sm-sidebar;
-        &.wrapper-zigzag:nth-child(even) {
-            margin: 1.5rem @sm-sidebar 1.5rem 1.5rem;
-        }
+        max-width: 40rem;
+        margin: 0 0 0 auto;
+        padding: 0;
     });
     .md-plus({
-        margin: 2rem 5rem 2rem @md-sidebar;
-        padding: 2rem 0;
-        &.wrapper-zigzag:nth-child(even) {
-            margin: 2rem @md-sidebar 2rem 5rem;
-        }
+        margin: 0 auto;
     });
 }
 
@@ -46,24 +28,28 @@
     &:extend(.padded);
     padding-top: 10vh;
     .sm-plus({
-        float: left;
-        padding-top: 20vh;
-        width: @sm-sidebar;
+        padding: 0;
+        width: 40rem;
+        margin: 0 0 0 auto;
     });
     .md-plus({
-        padding-top: 5rem;
-        width: @md-sidebar;
+        width: 40rem;
+        margin: auto;
     });
+}
+.page-caption {
+    text-transform: none;
+    font-weight: normal;
 }
 
 
 
 // objects
 .bullet-list {
-    &:extend(.indent-one);
+    // &:extend(.indent-one);
     a {
         display: block;
-        padding: 0.25em 0;
+        padding: 0.25rem 0;
         text-decoration: none;
         &:after { content: "→"; }
     }
@@ -82,7 +68,7 @@
         margin: -0.15rem -0.3rem;
     }
 }
-.prose .links-list { margin-top: -2.5rem; }
+.prose .links-list { margin-top: -1.25rem; }
 
 .testimonial {
     margin-top: 3rem;
@@ -111,7 +97,7 @@
 .testimonial-attribution {
     margin-left: auto;
     max-width: 15rem;
-    margin-bottom: 3rem;
+    // margin-bottom: 3rem;
     
     &:before {
         content: "—";
@@ -127,8 +113,17 @@
 
 
 // base
+.header {
+    
+    // padding-top: 0;
+    // padding-bottom: 0;
+    width: 100%;
+    // margin-top: 2rem;
+}
 .header-logo {
+    position: fixed;
     float: left;
+    display: block;
     width: 12rem;
     margin: 0 0 0 -0.5rem;
     padding: 0.5rem 0 0.5rem 0.5rem;
@@ -137,37 +132,40 @@
         margin: 0;
         height: 7rem;
         width: 100%;
-        background: url(../img/hamon-circle.svg) no-repeat scroll left top;
+        background: url(../img/hamon-monogram.svg) no-repeat scroll left top;
         background-size: contain;
     }
     .sm-plus({
-        width: 15rem;
-        .ir {
-            height: 10rem;
-            background-image: url(../img/hamon-logo.svg);
-        }
+        // float: none;
+        // position: relative;
+        z-index: 100;
+        @bwidth: 0;
+        width: 6rem + 2*@bwidth;
+        margin: 0 auto;
+        padding: 0 @bwidth;
+        background: white;
+        .ir { height: 6rem; width: 6rem; margin: auto; }
     });
 }
 .header-nav {
-    text-align: right;
+    float: left;
+    clear: both;
     text-transform: uppercase;
+    @vshift: 7rem;
+    margin: @vshift auto -@vshift;
+    
     a:after { display: none; }
     a:hover { text-decoration: underline; }
-    ul {
-        padding-left: 0;
-        max-width: 50%;
-        margin: 0 0 0 auto;
-    }
-    li:last-child a {
-        display: inline-block;
-        margin-top: 0.25rem;
-        padding: 0.25rem 0.75rem;
-        background: @brand-one;
-        color: @brand-three;
-        &:hover {
-            color: @brand-three !important;
+    a.active{
+        font-weight: bold;
+        &:before {
+            position: absolute;
+            content: ">";
+            margin-left:-0.75em;
+            margin-top: -0.05em;
         }
     }
+    ul { padding-left: 0; }
 }
 .footer-logo {
     display: block;
