--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -68,6 +68,7 @@ code {
 .tquo           { margin-left: -0.68em; }
 .no-underline   { text-decoration: none !important; display: inline-block; }
 .centered       { text-align: center; }
+.prose-leading  { line-height: @prose-leading; }
 
 
 
@@ -125,7 +126,7 @@ h1,
 h2,
 h3,
 dt {
-    margin: 3rem 0 1rem;
+    margin: 1rem 0 1.5rem;
 }
 ul,
 ol,
@@ -134,8 +135,8 @@ blockquote,
 pre,
 figure,
 p {
-    margin: 0 0 3rem;
-    + .collapse { margin-top: -3rem !important; }
+    margin: 0 0 1.5rem;
+    + .collapse { margin-top: -1.5rem !important; }
 }
 
 
@@ -143,17 +144,19 @@ p {
 /* Styles */
 
 .title-one {
+    &:extend(.size-regular);
     text-transform: uppercase;
     font-weight: normal;
-    // border-bottom: 1px solid;
-    // padding-bottom: 0.5em;
+    margin: 1rem 0 1.5rem;
+    color: @brand-three;
 }
 .title-two {
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
+    margin-bottom: 0.5rem;
+    font-weight: normal;
 }
 .title-three {
-    &:extend(.title-two);
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
     line-height: 1.2;
     margin-bottom: 0.25em;
     a {
@@ -167,6 +170,7 @@ p {
     border-bottom: 1px solid lighten(@brand-two, 70%);
     padding-bottom:0.75rem;
     margin-bottom: 0.75rem;
+    .brand-three;
 }
 .title-fineprint {
     text-transform: uppercase;
@@ -186,22 +190,21 @@ p {
     // }
     
     h3 {
-        &:extend(.size-xlarge);
+        &:extend(.size-regular);
         &:extend(.title-four);
     }
+    * + h3 { margin-top: 3rem; }
     h4 {
         &:extend(.title-three);
     }
     
-    p + p  { margin-top: -1.5rem; }
+    p + p  { margin-top: -0.75rem; }
     p + ol,
-    p + ul { margin-top: -1rem; }
+    p + ul { margin-top: -0.5rem; }
     
-    ol,
-    ul,
     li li        { &:extend(.indent-one); }
     ol           { list-style-type: decimal; }
-    ul li:before { content: "–"; position: absolute; margin-left: -2rem; }
+    ul li:before { content: "–"; position: absolute; margin-left: -1rem; }
     ol ol,
     ol ul,
     ul ol,
@@ -214,27 +217,13 @@ p {
     figure.highlight { margin: 0; }
     pre {
         background: @brand-five-light;
-        border: solid @brand-five-light;
-        border-width: 0 1rem;
-        padding: 1.5rem 1rem;
-        margin: -1rem -2rem 2rem;
-        .sm-plus({
-            margin-left: -(2.5rem + 0.5rem);
-            margin-right:-(2.5rem + 0.5rem);
-            padding-left: (2.5rem - 0.5rem);
-            padding-right:(2.5rem - 0.5rem);
-        });
-        .md-plus({
-            margin-left: -(4.5rem + 0.5rem);
-            margin-right:-(4.5rem + 0.5rem);
-            padding-left: (4.5rem - 0.5rem);
-            padding-right:(4.5rem - 0.5rem);
-        });
+        padding: 1rem 1.5rem;
         overflow-x: scroll;
         -webkit-overflow-scrolling: touch;
         code {
             background: none;
             padding: 0;
+            font-size: 0.8334em;
         }
     }
     
