--- a/templates/_includes/articles_listing_by_topic.liquid
+++ b/templates/_includes/articles_listing_by_topic.liquid
@@ -14,10 +14,10 @@
   {% assign length = articles | size %}
   
 {% if length > 0 %}
-  <section id="{{ topic.title | slugify }}" class="wrapper">
-    <div class="container">
+  <section id="{{ topic.title | slugify }}" class="{{ include.outer_class|default: "wrapper" }}">
+    <div class="{{ include.inner_class|default: "container" }}">
       {% unless include.title == false %}
-        <h3 class="size-xlarge title-four">
+        <h3 class="size-regular title-four">
           {{ topic.title | append: include.title_append | prepend: include.title_prepend }}
         </h3>
       {% endunless %}
